Fix typos Hatree -> Hartree

--- a/paper/effective_electron_interaction.tex
+++ b/paper/effective_electron_interaction.tex
@@ -442,7 +442,7 @@ The physical meaning of terms will be clear later.
     \end{subfigure}
     \caption{The first order renormalized diagrams and their counterterms.
         a) Quasiparticle $4$-point vertex function.
-        b) Quasiparticle self-energy. The Hatree diagram is neglected since it merely shifts the chemical potential.}
+        b) Quasiparticle self-energy. The Hartree diagram is neglected since it merely shifts the chemical potential.}
     \label{fig:order1}
 \end{figure}
 
