sigma for 2D case

--- a/example/sigma/plotK.ipynb
+++ b/example/sigma/plotK.ipynb
@@ -155,6 +155,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -235,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -357,6 +359,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -401,7 +404,7 @@
     }
    ],
    "source": [
-    "interp = pyimport(\"scipy.interpolate\")\n",
+    "# interp = pyimport(\"scipy.interpolate\")\n",
     "style = PyPlot.matplotlib.\"style\"\n",
     "style.use([\"science\", \"std-colors\"])\n",
     "color = [cdict[\"blue\"], cdict[\"red\"]]\n",
